--- a/app/src/main/res/layout/fragment_artefact_list.xml
+++ b/app/src/main/res/layout/fragment_artefact_list.xml
@@ -37,35 +37,45 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:id="@+id/layout_filter"
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="8dp">
 
-            <EditText
-                android:id="@+id/edit_list_filter"
+            <RelativeLayout
+                android:id="@+id/layout_filter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:hint="name" />
+                android:visibility="gone">
 
-            <Spinner
-                android:id="@+id/spinner_list_filter_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/edit_list_filter"
-                android:layout_centerVertical="true" />
+                <EditText
+                    android:id="@+id/edit_list_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:hint="name" />
 
-            <Button
-                android:id="@+id/button_artefact_list_filter_submit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/edit_list_filter"
-                android:layout_alignParentRight="true"
-                android:text="apply" />
+                <Spinner
+                    android:id="@+id/spinner_list_filter_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_list_filter"
+                    android:layout_centerVertical="true" />
 
-        </RelativeLayout>
+                <Button
+                    android:id="@+id/button_artefact_list_filter_submit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_list_filter"
+                    android:layout_alignParentRight="true"
+                    android:text="apply" />
+
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.RecyclerView
