--- a/app/src/main/res/layout/fragment_artefact_list.xml
+++ b/app/src/main/res/layout/fragment_artefact_list.xml
@@ -112,16 +112,59 @@
 
                     <Button
                         android:id="@+id/button_artefact_list_apply_category_filter"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/edit_list_filter"
                         android:layout_alignParentRight="true"
+                        android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:background="@drawable/buttons"
                         android:text="apply"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/edit_list_filter" />
 
+                    <EditText
+                        android:id="@+id/edit_artefact_age_from"
+                        android:layout_width="56dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:hint="Year"
+                        android:gravity="center"
+                        app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
+                        app:layout_constraintStart_toEndOf="@+id/radioGroup"
+                        app:layout_constraintTop_toBottomOf="@+id/spinner_list_filter_category"
+                        app:layout_constraintVertical_bias="0.842" />
+
+                    <Button
+                        android:id="@+id/button_before_after_from"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/buttons"
+                        app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
+                        app:layout_constraintStart_toEndOf="@+id/edit_artefact_age_from"
+                        app:layout_constraintTop_toBottomOf="@+id/spinner_list_filter_category"
+                        app:layout_constraintVertical_bias="1.0" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:text="-"
+                        app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
+                        app:layout_constraintEnd_toStartOf="@+id/edit_artefact_age"
+                        app:layout_constraintHorizontal_bias="0.536"
+                        app:layout_constraintStart_toEndOf="@+id/button_before_after_from"
+                        app:layout_constraintTop_toBottomOf="@+id/spinner_list_filter_category"
+                        app:layout_constraintVertical_bias="0.688" />
+                    <!--
                     <ImageButton
                         android:id="@+id/button_bigger_smaller"
                         android:layout_width="49dp"
@@ -134,41 +177,42 @@
                         app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
                         app:layout_constraintStart_toEndOf="@+id/radioGroup"
                         app:layout_constraintTop_toBottomOf="@+id/spinner_list_filter_category"
-                        app:layout_constraintVertical_bias="1.0" />
+                        app:layout_constraintVertical_bias="1.0" />-->
 
                     <EditText
                         android:id="@+id/edit_artefact_age"
-                        android:layout_width="80dp"
+                        android:layout_width="56dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
+                        android:gravity="center"
                         android:hint="Year"
                         android:inputType="date"
-                        android:gravity="center"
                         app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
-                        app:layout_constraintStart_toEndOf="@+id/button_bigger_smaller"
+                        app:layout_constraintEnd_toStartOf="@+id/button_before_after"
+                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintTop_toBottomOf="@+id/spinner_list_filter_category"
-                        app:layout_constraintVertical_bias="1.0" />
+                        app:layout_constraintVertical_bias="0.842" />
 
                     <Button
                         android:id="@+id/button_before_after"
-                        android:layout_width="58dp"
+                        android:layout_width="40dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
                         android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
                         android:background="@drawable/buttons"
                         app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
-                        app:layout_constraintStart_toEndOf="@+id/edit_artefact_age"
+                        app:layout_constraintEnd_toStartOf="@+id/button_artefact_list_apply_age_filter"
                         app:layout_constraintTop_toBottomOf="@+id/spinner_list_filter_category"
                         app:layout_constraintVertical_bias="1.0" />
 
                     <Button
                         android:id="@+id/button_artefact_list_apply_age_filter"
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="8dp"
@@ -176,8 +220,6 @@
                         android:text="Apply"
                         app:layout_constraintBottom_toTopOf="@+id/button_show_filter_on_map"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        app:layout_constraintStart_toEndOf="@+id/button_before_after"
                         app:layout_constraintTop_toBottomOf="@+id/button_artefact_list_apply_category_filter" />
 
                     <Button
@@ -197,10 +239,6 @@
                         app:layout_constraintVertical_bias="1.0" />
 
                 </android.support.constraint.ConstraintLayout>
-
-
-
-
 
         </android.support.v7.widget.CardView>
 
