--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -17,11 +17,215 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
             android:layout_alignParentTop="true"
+            android:background="@color/colorPrimary"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/toolbar"
+            android:layout_margin="8dp"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="8dp">
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/layout_filter_map"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone">
+
+                <RadioGroup
+                    android:id="@+id/radioGroup_map"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0">
+
+                    <RadioButton
+                        android:id="@+id/radio_map_artefact_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp"
+                        android:checked="true" />
+
+                    <RadioButton
+                        android:id="@+id/radio_map_artefact_category"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp" />
+
+                    <RadioButton
+                        android:id="@+id/radio_map_artefact_age"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="16dp" />
+                </RadioGroup>
+
+                <EditText
+                    android:id="@+id/edit_map_filter_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:hint="name"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/radioGroup_map"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Spinner
+                    android:id="@+id/spinner_map_filter_category"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_list_filter"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/button_map_apply_category_filter"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toEndOf="@+id/radioGroup_map"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_map_filter_name" />
+
+                <Button
+                    android:id="@+id/button_map_apply_category_filter"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/edit_list_filter"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/buttons"
+                    android:text="apply"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_map_filter_name" />
+
+                <EditText
+                    android:id="@+id/edit_map_artefact_age_from"
+                    android:layout_width="56dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:hint="Year"
+                    android:inputType="number"
+                    app:layout_constraintBottom_toTopOf="@+id/button_show_filter_as_a_list"
+                    app:layout_constraintStart_toEndOf="@+id/radioGroup_map"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_map_filter_category"
+                    app:layout_constraintVertical_bias="0.842" />
+
+                <Button
+                    android:id="@+id/button_map_anno_domini_from"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/buttons"
+                    app:layout_constraintBottom_toTopOf="@+id/button_show_filter_as_a_list"
+                    app:layout_constraintStart_toEndOf="@+id/edit_map_artefact_age_from"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_map_filter_category"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="-"
+                    app:layout_constraintBottom_toTopOf="@+id/button_show_filter_as_a_list"
+                    app:layout_constraintEnd_toStartOf="@+id/edit_map_artefact_age"
+                    app:layout_constraintHorizontal_bias="0.536"
+                    app:layout_constraintStart_toEndOf="@+id/button_map_anno_domini_from"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_map_filter_category"
+                    app:layout_constraintVertical_bias="0.688" />
+
+                <EditText
+                    android:id="@+id/edit_map_artefact_age"
+                    android:layout_width="56dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:hint="Year"
+                    android:inputType="number"
+                    app:layout_constraintBottom_toTopOf="@+id/button_show_filter_as_a_list"
+                    app:layout_constraintEnd_toStartOf="@+id/button_map_anno_domini_to"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_map_filter_category"
+                    app:layout_constraintVertical_bias="0.842" />
+
+                <Button
+                    android:id="@+id/button_map_anno_domini_to"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/buttons"
+                    app:layout_constraintBottom_toTopOf="@+id/button_show_filter_as_a_list"
+                    app:layout_constraintEnd_toStartOf="@+id/button_artefact_map_apply_age_filter"
+                    app:layout_constraintTop_toBottomOf="@+id/spinner_map_filter_category"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Button
+                    android:id="@+id/button_artefact_map_apply_age_filter"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/buttons"
+                    android:text="Apply"
+                    app:layout_constraintBottom_toTopOf="@+id/button_show_filter_as_a_list"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/button_map_apply_category_filter" />
+
+                <Button
+                    android:id="@+id/button_show_filter_as_a_list"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/buttons"
+                    android:text="Show search result as a list"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/button_map_reset_filter"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/radioGroup_map"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <Button
+                    android:id="@+id/button_map_reset_filter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/buttons"
+                    android:text="Reset filter"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/button_artefact_map_apply_age_filter" />
+
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
+
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
@@ -35,16 +239,16 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:clickable="true"
             android:src="@drawable/ic_add_circle"
-            app:rippleColor="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:rippleColor="@color/colorPrimary" />
 
     </RelativeLayout>
 
@@ -55,9 +259,6 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer_menu" />
-
-
-
 
 
 </android.support.v4.widget.DrawerLayout>
