--- a/app/src/main/res/layout/fragment_artefact_list.xml
+++ b/app/src/main/res/layout/fragment_artefact_list.xml
@@ -225,6 +225,19 @@
                         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                         app:layout_constraintVertical_bias="1.0" />
 
+                    <Button
+                        android:id="@+id/button_reset_filter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/buttons"
+                        android:text="Reset filter"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/button_artefact_list_apply_age_filter" />
+
                 </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
