--- a/app/src/main/res/layout/fragment_artefact_detail.xml
+++ b/app/src/main/res/layout/fragment_artefact_detail.xml
@@ -50,6 +50,8 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:cardElevation="4dp"
+                    android:clipToPadding="true"
                     android:foreground="?android:attr/selectableItemBackground"
                     app:cardCornerRadius="8dp">
 
@@ -111,6 +113,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@color/white"
+                app:cardElevation="4dp"
+                android:clipToPadding="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardCornerRadius="8dp">
 
@@ -179,6 +183,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@color/white"
+                app:cardElevation="4dp"
+                android:clipToPadding="true"
                 android:foreground="?android:attr/selectableItemBackground"
                 app:cardCornerRadius="8dp">
 
@@ -187,7 +193,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:elevation="4dp"
                     android:text="@string/artefact_detail_description"
                     android:textColor="@color/civitas_dark_grey" />
 
