--- a/app/src/main/res/layout/activity_impressum.xml
+++ b/app/src/main/res/layout/activity_impressum.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <WebView
+        android:id="@+id/webview_impressum"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </WebView>
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -13,6 +20,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:src="@drawable/civitas_main_logo"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,6 +36,7 @@
         android:textColor="@color/civitas_dark_grey"
         android:textSize="18dp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -40,11 +49,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textColor="@color/civitas_dark_grey"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
-
 
 
 </android.support.constraint.ConstraintLayout>
